src/scss/theme/dark/common.scss
@import "~scss/_vars";
@import "~scss/theme/dark/_vars";

/*@media (prefers-color-scheme: dark) {*/
html.themeDark {

    /* Common */
    /* ---------------------------------------------------------------- */

    body { background: $colorBlack; color: $colorPrimary; }

    a { color: $colorPrimary; }
    a:hover { color: $colorOrange; }

    #root > .loaderWrapper { background: $colorBlack; }
    #root > .loaderWrapper {
        .logo { background-image: url('~img/theme/dark/logo/color.svg'); }
    }

    ::selection { color: $colorBlack; }
	
    .cover.main::after {
        content: ""; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: rgba(0,0,0,0.3);
    }
    .cover.type2.black { background-color: #000 !important; }

    .empty { color: $colorTertiary; }
    .placeholder { color: $colorTertiary; }
    ::-webkit-input-placeholder { color: $colorTertiary !important; }
    ::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.5); }

    .bgColor { color: $colorTertiary; }
    .textColor-default { color: $colorPrimary; }

    .isTag.tagColor-default { color: $colorPrimary !important; background: $colorBlack !important; box-shadow: 0px 0px 0px 1px $colorLinePrimary inset; }
    .isTag.tagColor-grey { color: #4b4b4b !important; background: #b0b0b0 !important; }
    .isTag.tagColor-yellow { color: #ad8620 !important; background: #f9d77e !important; }
    .isTag.tagColor-orange { color: #a85c34 !important; background: #f4ad88 !important; }
    .isTag.tagColor-red { color: #a64949 !important; background: #f5a6a6 !important; }
    .isTag.tagColor-pink { color: #965088 !important; background: #eda2de !important; }
    .isTag.tagColor-purple { color: #6948b4 !important; background: #c8b2fa !important; }
    .isTag.tagColor-blue { color: #274ccd !important; background: #99afff !important; }
    .isTag.tagColor-ice { color: #3d69aa !important; background: #a4c7fa !important; }
    .isTag.tagColor-teal { color: #2f876f !important; background: #8bdac4 !important; }
    .isTag.tagColor-lime { color: #388a2b !important; background: #b1f5a6 !important; }

    /* Components */
    /* ---------------------------------------------------------------- */

    .loaderWrapper {
        .loader { border-color: $colorLinePrimary; border-left-color: $colorOrange; }
    }

    /* Button */

    .button.grey { color: $colorPrimary; box-shadow: 0px 0px 0px 1px $colorLineSecondary inset; }
    .button.grey:hover { box-shadow: 0px 0px 0px 1px $colorLinePrimary inset; }

    .button.blank { border-color: $colorLineSecondary; }
    .button.blank:hover { border-color: $colorLinePrimary; }

    .filter {
        .line { background: $colorLineSecondary; }
    }

    .frame { background: $colorBlack; }

    .textarea { background: $colorBgIcon; }

    .switch { background: $colorBgInactive; }

    .sync { background: $colorBgIcon; }

    .select { border-color: $colorLinePrimary; }
    .select:hover, .select.active { background: $colorHover; }
    .select {
        .icon.arrow { background-image: url('~img/theme/dark/arrow/select/dark.svg') !important; }
    }

    .inputWithFile { background: $colorHover; color: $colorSecondary; border-color: transparent; }
    .inputWithFile {
        .input::placeholder { color: $colorSecondary; }
        .fileWrap:hover .border { color: $colorPrimary; }

        #url { color: $colorPrimary; }
    }

    .listTemplate {
        .item.add { border-color: $colorLinePrimary; }
        .item:before { background: $colorHover; }
    }

    /* PreviewObject */

    .previewObject {
        .border { border-color: $colorLinePrimary; }
        .loaderWrapper { border-color: $colorLinePrimary; }
        .icon.logo { background-image: url('~img/theme/dark/icon/type/logo.svg'); }
        .heading {
            .iconObject { background-color: $colorBgIcon; box-shadow: 0px 0px 0px 1px $colorBlack inset; }
            .featured { color: $colorSecondary; }
            .bullet { background: $colorSecondary; }
        }

        .blocks {
            .element {
                .line { background: $colorSecondary; }
            }
        }
    }

    /* Preview */

    .preview {
        .content { background: $colorBgLight; }
        .head { border-color: $colorLineSecondary; color: $colorSecondary; }
        .head {
            .item:hover { color: $colorPrimary; }
        }

        .previewLink {
            .name { color: $colorPrimary; }
            .descr { color: $colorSecondary; }
            .link { color: $colorSecondary; }
            .img { border-color: $colorLineSecondary; }
        }
    }

    /* Pager */

    .pager {
        .pageItem:hover { color: $colorPrimary; }
        .pageItem.active { color: $colorOrange; }

        .icon.arrow { background-image: url('~img/theme/dark/arrow/pager0.svg'); }
        .icon.arrow:hover { background-image: url('~img/theme/dark/arrow/pager1.svg'); }
        .icon.arrow.disabled:hover { background-image: url('~img/theme/dark/arrow/pager0.svg'); }
    }

    /* Progress */

    .progress {
        .inner { background: $colorBgLight; }
        .inner {
            .label { color: $colorPrimary; }
            .bar { background: $colorHover; }
        }
    }

    .tooltip { background: $colorBgIcon; color: $colorPrimary; }

    /* Icon */

    .icon.ghost { background-image: url('~img/theme/dark/icon/ghost.svg'); }

    /* IconObject */

    .iconObject.c56 { background-color: $colorBgIcon; }
    .iconObject.c64 { background-color: $colorBgIcon; }
    .iconObject.c96 { background-color: $colorBgIcon; }
    .iconObject.c112 { background-color: $colorBgIcon; }
    .iconObject.c128 { background-color: $colorBgIcon; }
    .iconObject.c40.isRelation, .iconObject.c48.isRelation { background-color: $colorBgIcon; }
    .iconObject.withLetter { background-color: $colorBgIcon; }

    /* EditorControls */

    .editorControls {
        .btn { background: $colorBgIcon; color: $colorSecondary; }
        .btn:hover { color: $colorPrimary; }

        .btn {
            .icon.icon { background-image: url('~img/theme/dark/icon/add/icon0.svg'); }
            .icon.addCover { background-image: url('~img/theme/dark/icon/add/cover0.svg'); }
            .icon.layout { background-image: url('~img/theme/dark/icon/add/layout0.svg'); }
            .icon.relation { background-image: url('~img/theme/dark/icon/add/relation0.svg');  }
        }
        .btn:hover, .btn.hover {
            .icon.icon { background-image: url('~img/theme/dark/icon/add/icon1.svg'); }
            .icon.addCover { background-image: url('~img/theme/dark/icon/add/cover1.svg'); }
            .icon.layout { background-image: url('~img/theme/dark/icon/add/layout1.svg'); }
            .icon.relation { background-image: url('~img/theme/dark/icon/add/relation1.svg');  }
        }
    }

    /* Editor */

    .editorWrapper {
        .focusable.isFocused { background: $colorHover; }
    }

    /* Header */
    /* ---------------------------------------------------------------- */

    .header.headerMainEdit { background: $colorBlack; }
    .header.headerMainEdit {
        .path { border: 0px; line-height: 28px; }
        .path {
            .item:hover { color: $colorPrimary; }
        }
        .icon.big:hover, .icon.big.hover { background-color: $colorHover; }
    }

    .header.headerMainIndex {
        .side.center { border: 0px; color: $colorSecondary; background: $colorBlack30; }
    }

    .header.headerMainHistory { background: $colorBlack; }
    .header.headerMainHistory {
        .side {
            .item { color: $colorSecondary; }
            .item {
                .icon.arrow { background-image: url('~img/theme/dark/arrow/history0.svg'); margin: 0px; }
            }
        }
        
		.item.grey:hover { color: $colorPrimary; }

		.item:hover {
			.icon.arrow { background-image: url('~img/theme/dark/arrow/history1.svg'); }
		}
    }

    /* Footer */
    /* ---------------------------------------------------------------- */

    .footer {
        .icon.big { background-color: $colorBgIcon; }
    }

    @import "./menu.scss";
    @import "./popup.scss";
    @import "./page.scss";
    @import "./block.scss";

    /* Cells */
    /* ---------------------------------------------------------------- */

    .cellContent {
        .more { background-color: $colorBgIcon; color: $colorSecondary; }
    }

    .cell.isEditing {
        .cellContent { background: $colorBlack; }
    }
}

